@@ -1,4 +1,5 @@
 package com.fds.sis_controle_assinaturas.dominio.service;
+
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
@@ -15,37 +16,84 @@ import com.fds.sis_controle_assinaturas.dominio.model.ClienteModel;
 import com.fds.sis_controle_assinaturas.dominio.model.PagamentoModel;
 import com.fds.sis_controle_assinaturas.dominio.persistence.IAssinaturaRepository;
 
+/**
+ * Service class for managing subscriptions (`AssinaturaModel`).
+ * Provides methods to retrieve subscriptions based on various criteria
+ * such as status and client.
+ */
 public class ServicoAssinatura {
+
+    /**
+     * Repository interface for subscription persistence operations.
+     */
     private IAssinaturaRepository repository;
+
+    /**
+     * Constructs a new `ServicoAssinatura` with the specified repository.
+     *
+     * @param repository an implementation of `IAssinaturaRepository` used for data access
+     */
     public ServicoAssinatura(IAssinaturaRepository repository){
         this.repository = repository;
     }
 
+    /**
+     * Retrieves a list of subscriptions filtered by their status.
+     *
+     * @param status the status to filter subscriptions by, represented by `StatusAssinatura` enum
+     * @return a list of `AssinaturaModel` instances matching the specified status
+     */
     public List<AssinaturaModel> getAssinaturasByStatus(StatusAssinatura status){
         List<AssinaturaModel> assinaturas = repository.todas();
-        if(status == StatusAssinatura.ATIVA)
-            assinaturas = repository.todas().stream().filter(
-                    AssinaturaModel::isActive).toList();
-        else if(status == StatusAssinatura.INATIVA)
-            assinaturas = repository.todas().stream().filter(
-                    Predicate.not(AssinaturaModel::isActive)).toList();
+
+        if(status == StatusAssinatura.ATIVA) {
+            assinaturas = repository.todas().stream()
+                    .filter(AssinaturaModel::isActive)
+                    .collect(Collectors.toList());
+        }
+        else if(status == StatusAssinatura.INATIVA) {
+            assinaturas = repository.todas().stream()
+                    .filter(Predicate.not(AssinaturaModel::isActive))
+                    .collect(Collectors.toList());
+        }
+
         return assinaturas;
     }
 
+    /**
+     * Retrieves a list of subscriptions associated with a specific client.
+     *
+     * @param cliente the `ClienteModel` instance representing the client
+     * @return a list of `AssinaturaModel` instances associated with the specified client
+     */
     public List<AssinaturaModel> getAssinaturasByCliente(ClienteModel cliente){
-        List<AssinaturaModel> assinaturas = repository.todas().stream().filter(assinatura -> assinatura.getCliente().getId().equals(cliente.getId())).toList();
+        List<AssinaturaModel> assinaturas = repository.todas().stream()
+                .filter(assinatura -> assinatura.getCliente().getId().equals(cliente.getId()))
+                .collect(Collectors.toList());
         return assinaturas;
     }
 
+    /**
+     * Retrieves a list of subscriptions associated with a specific application client.
+     *
+     * @param cliente the `AplicativoModel` instance representing the application client
+     * @return a list of `AssinaturaModel` instances associated with the specified application client
+     */
     public List<AssinaturaModel> getAssinaturasByCliente(AplicativoModel cliente){
-        List<AssinaturaModel> assinaturas = repository.todas().stream().filter(assinatura -> assinatura.getCliente().getId().equals(cliente.getCodigo())).toList();
+        List<AssinaturaModel> assinaturas = repository.todas().stream()
+                .filter(assinatura -> assinatura.getCliente().getId().equals(cliente.getCodigo()))
+                .collect(Collectors.toList());
         return assinaturas;
     }
 
+    /**
+     * Checks if a subscription with the specified ID exists.
+     *
+     * @param id the ID of the subscription to check
+     * @return `true` if the subscription exists, `false` otherwise
+     */
     public boolean getAssinaturaStatus(Long id){
         return repository.getAssinaturaById(id) != null;
     }
-
-
 
 }
